대사 업데이트

--- a/index.html
+++ b/index.html
@@ -420,7 +420,34 @@
                                 result = input.val().slice(0, i+1) + "....자뷰, 느껴본 적 있어?"; 
                                 output.text(result);
                                 isBreak = true;   
-                                break;   
+                                break;  
+							case "적" :
+								isRandom = makeRandom(1, 3);
+                                if(isRandom==1){
+									result = input.val().slice(0, i+1) + "....포탑을 파괴했다.";
+								} else if(){
+									result = input.val().slice(0, i+1) + "....순간이동기를 파괴했네.";
+								}
+                                 
+                                output.text(result);
+                                isBreak = true;   
+                                break; 
+							case "거" :
+                                result = input.val().slice(0, i+1) + "....점을 점령하겠다. 순식간에 처리하자."; 
+                                output.text(result);
+                                isBreak = true;   
+                                break;	
+							case "화" :
+                                isRandom = makeRandom(1, 3);
+                                if(isRandom==1){
+									result = input.val().slice(0, i+1) + "....물을 옮기고 있다.";
+								} else if(isRandom==2){
+									result = input.val().slice(0, i+1) + "....물을이 멈췄다.  ";
+								}
+															
+                                output.text(result);
+                                isBreak = true;   
+                                break;		
                             default : 
                                 break;
                         } 
