--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                                 isBreak = true;   
                                 break;	
 							case "요" :
-                                result = input.val().slice(0, i+1) + "....요시! 적 포탑을 파괴했다."; 
+                                result = input.val().slice(0, i+1) + "....시! 적 포탑을 파괴했다."; 
                                 output.text(result);
                                 isBreak = true;   
                                 break;		
