--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
                 if(input.val() == false){
                     alert("내용을 입력해 주세요.");
                 } else if(output.text() == "이곳에 번역된 내용이 표시됩니다."){
-                    alert("번역할 내용이 마땅치 않네요... 다른 내용을 입력해 보세요.");
+                    alert("입력한 내용중 오버워치 대사와 연결할만한 것이 없네요...");
                 } else {
                     copyToClipboard(output.text());    
                 }
