--- a/index.html
+++ b/index.html
@@ -516,16 +516,17 @@
             <div class="main-visual">
                 <div class="dim">
                     <div class="guide-container">
-                        <h1 class="title">시계드립 생성기</h1>
+                        <h1 class="title">시계드립<br />생성기</h1>
                         <div class="guide">
-                            <p>말을 줄이지 말고 그냥 쓰고 싶은 내용을 자유롭게 입력하세요.</p>
+                            <p>쓰고 싶은 내용을 자유롭게 입력하세요. 맞출필요 없어요.</p>
                             <p>입력한 내용 중 오버워치와 연결할만한 것이 있다면 번역해 드립니다.</p>
                             <p class="sub">이 사이트는 무료호스팅이라 언제 뻗을지 모름.</p>
                         </div>
                     </div>
                     <div class="area-transper">
-                        <textarea class="input" placeholder="오버워치 대사로 번역할 내용을 입력해주세요."></textarea>
+                        <textarea class="input" placeholder="번역할 내용을 입력해주세요."></textarea>
                         <button class="btn">입력한 내용 대사로 전환하기</button>
+                        
                     </div>
                 </div>
             </div>
