--- a/index.html
+++ b/index.html
@@ -38,16 +38,6 @@
 
     </script>
 
-    <!-- Google Tag Manager -->
-    <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-NR2225"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-NR2225');</script>
-    <!-- End Google Tag Manager -->
-
     <script type="text/javascript">
         $(document).ready(function(){
 
@@ -670,7 +660,9 @@
                             <button class="btn-clip">번역된 내용 클립보드로 복사</button>
                         </div>
                         <p class="list">현재 총 80개의 대사를 지원합니다.</p>
-                    </div>
+
+                        <p class="email">대사 제보는 이곳으로 : </p>
+                        <a class="email-link" href="mailto:studiotemple81@gmail.com">studiotemple81@gmail.com</a>
                 </div>
             </div>
         </div>
