--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                     });
                 ga('send', 'event', '클라이언트', 'click', '다운로드끝', errcode);
                 ga('send', 'event', '클라이언트', 'error', errcode, errcode);
+                ga('send', 'event', '문자열', 'click', '테스트', 'errcode');
                 if(input.val() == false){
                     alert("내용을 입력해 주세요.");
                 } else if(output.text() == "이곳에 번역된 내용이 표시됩니다."){
