--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             var input = $('.input');
             var output = $('.result');
             var btn = $('.btn');
-            var btn1 = $('.btn');
+            var btn1 = $('.btn1');
             var btn2 = $('.btn2');
             var btn3 = $('.btn3');
             var btn4 = $('.btn4');
@@ -144,12 +144,13 @@
                 <div class="btn-area">
                     <button class="btn">다시 쓰기</button>
                     <button class="btn-clip">번역된 내용 클립보드로 복사</button>
-                </div>
                     <button class="btn1">다운로드시작</button>
                     <button class="btn2">다운로드성공이벤트</button>
                     <button class="btn3">오류발생</button>
                     <button class="btn4">사용자중지</button>
                     <button class="btn5">창닫기</button>
+                </div>
+
                 <p class="list">현재 총 <span class='count'></span>개의 대사를 지원합니다.
 
                 <p class="email">대사 제보는 이곳으로 : </p>
