--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <div class="btn-area">
                     <button class="btn">다시 쓰기</button>
                     <button class="btn-clip">번역된 내용 클립보드로 복사</button>
-                    <style>.test_btn button{width:300px; height: 60px; clear:both; cursor: pointer;}</style>
+                    <style>.test_btn button{width:300px; height: 60px; clear:both; cursor: pointer; margin: 10px;}</style>
                     <div class="test_btn">
                         <button class="btn1">다운로드시작</button>
                         <button class="btn2">다운로드성공이벤트</button>
