--- a/index.html
+++ b/index.html
@@ -24,16 +24,17 @@
     <!-- <script type="text/javascript" src="./js/overwatch_comment.js"></script> -->
 
 
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-52971761-3"></script>
     <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-      ga('create', 'UA-52971761-2', 'auto');
-      ga('send', 'pageview');
-
+      gtag('config', 'UA-52971761-3');
     </script>
+
 
     <script type="text/javascript">
         $(document).ready(function(){
@@ -57,28 +58,38 @@
             }
 
             function mixing(original) {
-                var random = makeRandom(1, 10000);
+                var random = makeRandom(1, 1000);
                 return original*random;
               }
 
             sessionId = mixing(121);
-            sec = mixing(2318);
+            sec = mixing(36000000);
             errCode = mixing(5);
             errCode1 = mixing(3);
             errCode2 = mixing(2);
 
             btn.on('click', function(){
-                ga('send', 'event', 're-DownLoads', 'Download-start', sessionId);
+                ga('send', 'event', 'DownLoads', 'Download-start');
                 console.log(sessionId);
             });
 
             btn1.on('click', function(){
-              ga('send', 'event', 're-DownLoads', 'Download-complete', sessionId);
+              ga('send', 'event', 'DownLoads', 'Download-complete');
               console.log(sessionId);
             });
 
             btn2.on('click', function(){
-                ga('send', 'event', 're-DownLoads', 'Download-time', sessionId, sec);
+                if(sec > 0 && sec < 3600000){
+                    ga('send', 'event', 'DownLoads', 'Download-time', '1시간미만', sec);
+                } else if(sec > 3600000 && sec < 7200000){
+                    ga('send', 'event', 'DownLoads', 'Download-time', '1시간초과 2시간미만', sec);
+                } else if(sec > 7200000 && sec < 10800000){
+                    ga('send', 'event', 'DownLoads', 'Download-time', '2시간초과 3시간미만', sec);
+                } else if(sec > 10800000 && sec < 14400000){
+                    ga('send', 'event', 'DownLoads', 'Download-time', '3시간초과 4시간미만', sec);
+                } else if(sec < 14400000){
+                    ga('send', 'event', 'DownLoads', 'Download-time', '4시간초과', sec);
+                }
                 console.log(sessionId);
                 console.log('time : ' + sec);
             });
@@ -107,13 +118,13 @@
 
             btn7.on('click', function(){
                 var filename = "";
-                if (errCode2 > 0 && errCode2 < 5000){
+                if (errCode2 > 0 && errCode2 < 500){
                   filename ="OSChecker.dll";
-                } else if (errCode2 > 5000 && errCode2 < 10000 ){
+                } else if (errCode2 > 5000 && errCode2 < 1000 ){
                   filename ="Launcher.exe";
-                } else if (errCode2 > 10000 && errCode2 < 15000 ){
+                } else if (errCode2 > 10000 && errCode2 < 1500 ){
                   filename ="local.db";
-                } else if (errCode2 > 15000 && errCode2 < 20000 ){
+                } else if (errCode2 > 15000 && errCode2 < 2000 ){
                   filename ="DOWNLOADEDRESOURCES.DAT";
                 }
                 ga('send', 'event', 'StopCase', errCode2, filename);
