--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
             var btn7 = $('.btn7');
             var sessionId = 0;
             var sec = 0;
-            var errCode = 0;
-            var errCode1 = 0;
-            var errCode2 = 0;
+            var errCode = '';
+            var errCode1 = '';
+            var errCode2 = '';
 
             function makeRandom(min, max) {
                 var RandVal = Math.random() * (max-min) + min;
