--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             });
 
             btn7.on('click', function(){
+              $('btn-test').show();
+            });
+            $('btn-test').on('click', function(){
+              $('btn-test').hide();
             });
         });
     </script>
@@ -129,7 +133,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <button class="btn5">사용자중지</button>
                         <button class="btn6">창닫기</button>
                         <button class="btn7">오류발생파일</button>
-                        <button class="btn-test"></button>
+                        <button class="btn-test" style="display:none;">테스트야</button>
                     </div>
                 </div>
 
