--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             });
 
             btn7.on('click', function(){
-              $('btn-test').show();
+              $('.btn-test').show();
             });
-            $('btn-test').on('click', function(){
-              $('btn-test').hide();
+            $('.btn-test').on('click', function(){
+              $('.btn-test').hide();
             });
         });
     </script>
