--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <link href="./css/layout.css?t=201607081155" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="./js/jquery/jquery-3.0.0.min.js"></script>
+<!--     <script type="text/javascript" src="./js/jquery/jquery-3.0.0.min.js"></script> -->
     <!-- <script type="text/javascript" src="./js/overwatch_comment.js"></script> -->
 
 
